--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                     <div id="about-btn" class="card-action">
                         <div class="about-btn">
                             <!-- DOWNLOAD CV BUTTON -->
-                            <a href="#" class="btn waves-effect">Download CV</a>
+                            <a href="dangducminh_cv.pdf" target="_blank"  class="btn waves-effect">Download CV</a>
                             <!-- CONTACT BUTTON -->
-                            <a href="#contact" class="btn waves-effect">Contact Me</a>
+                            <a href="https://www.facebook.com/DM7CR7" target="_blank"  class="btn waves-effect">Contact Me</a>
                         </div>
                     </div>
                 </div>
