--- a/index.html
+++ b/index.html
@@ -286,14 +286,14 @@
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
-                                <small>Down Street College</small>
+                                <small>Iviettech Informatics Center</small>
                             </h6>
                             <h6>
                                 <small>Nov 2018 - ...</small>
                             </h6>
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
-                        <p>Now I am currently studying here to improve my skills</p>
+                        <p>I am currently studying here to improve my skills</p>
 
                     </div>
                 </div>
