--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
-                            I completed my high school degree from this prestigious institution.
+                            I completed my college degree from this prestigious institution.
                             I successful completed all the credits without any fallout and got A grade overall.
                         </p>
                     </div>
@@ -444,19 +444,19 @@
             <!-- FIRST TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>D</h6></div>
+                <div class="timeline-dot"><h6>S</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Designer</h6>
+                        <h6 class="timeline-title">Student Mark Manager</h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
-                                <small>RulerSoft</small>
+                                <small>Student Mark Manager</small>
                             </h6>
                             <h6>
-                                <small>Jan 2010 - Mar 2012</small>
+                                <small>2017</small>
                             </h6>
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
@@ -475,19 +475,19 @@
             <!-- SECOND TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>F</h6></div>
+                <div class="timeline-dot"><h6>C</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Frontend Developer</h6>
+                        <h6 class="timeline-title">Cosmestic Website</h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
-                                <small>Micro IT</small>
+                                <small>Cosmestic Website</small>
                             </h6>
                             <h6>
-                                <small>Jan 2012 - Mar 2014</small>
+                                <small>2018</small>
                             </h6>
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
@@ -503,19 +503,19 @@
             <!-- THIRD TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>U</h6></div>
+                <div class="timeline-dot"><h6>G</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">UI/UX Expert</h6>
+                        <h6 class="timeline-title">Giao Hang Cham Transport Website</h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
-                                <small>Libra IT Solutions</small>
+                                <small>Giao Hang Cham Transport Website</small>
                             </h6>
                             <h6>
-                                <small>Jan 2014 - Mar 2015</small>
+                                <small>2018</small>
                             </h6>
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
@@ -523,41 +523,14 @@
                             I started my expertise carrier here, spent tow years learning and working
                             in various UX/UI aspects. I worked on about 70+ projects local and online.
                         </p>
-
-                    </div>
-                </div>
-            </div>
-
-            <!-- FOURTH TIMELINE -->
-            <div class="timeline-block">
-                <!-- DOT -->
-                <div class="timeline-dot"><h6>S</h6></div>
-                <!-- TIMELINE CONTENT -->
-                <div class="card timeline-content">
-                    <div class="card-content">
-                        <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Senior Developer</h6>
-                        <!-- TIMELINE TITLE INFO -->
-                        <div class="timeline-info">
-                            <h6>
-                                <small>WebStyle Technologies</small>
-                            </h6>
-                            <h6>
-                                <small>Jan 2016 - Continue..</small>
-                            </h6>
-                        </div>
-                        <!-- TIMELINE PARAGRAPH -->
-                        <p>
-                            I recently joined here, currently working on various development
-                            aspects. I already worked on about..
-                        </p>
-                        <!-- BUTTON TRIGGER MODAL -->
-                        <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-5">
+ <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-5">
                             <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                         </a>
                     </div>
                 </div>
             </div>
+
+        
         </div>
     </div>
 </section>
