--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 
-<iframe src="https://www.airbnb.com/host/homes?irgwc=1&irclid=w%3A4zmv1qYxyJUe-0Rw0UrUzuUklz12247RqcRQ0&ircid=4560&c=Interspace%20Vietnam_290446&sharedid=127890&af=175871085"></iframe>
+<iframe src="https://www.airbnb.com/host/homes?irgwc=1&irclid=w%3A4zmv1qYxyJUe-0Rw0UrUzuUklz12247RqcRQ0&ircid=4560&c=Interspace%20Vietnam_290446&sharedid=127890&af=175871085" height="200" width="300"></iframe>
 <!--==========================================
                   PRE-LOADER
 ===========================================-->
