--- a/facebook.html
+++ b/facebook.html
@@ -4,8 +4,8 @@
 <meta property="og:description" content="" />
 <meta property="og:site_name" content="" />
 <meta property="og:title" content=" " />
-<meta property="og:url" content="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/74707238_1573831409434644_1048469308717400064_n.jpg?_nc_cat=1&_nc_oc=AQkS_maoVWxaXXxPLPErQMLRO5RfE3WgqAVZlP8qXooj3E9PzE5Bx4Ilp7uBf-KS4FU&_nc_ht=scontent.fdad3-1.fna&oh=5039c8bd5f35358ca1b667cef89b878b&oe=5E81DC7D" />
-<meta property="og:image" content="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/74707238_1573831409434644_1048469308717400064_n.jpg?_nc_cat=1&_nc_oc=AQkS_maoVWxaXXxPLPErQMLRO5RfE3WgqAVZlP8qXooj3E9PzE5Bx4Ilp7uBf-KS4FU&_nc_ht=scontent.fdad3-1.fna&oh=5039c8bd5f35358ca1b667cef89b878b&oe=5E81DC7D" />
+<meta property="og:url" content="https://cdn.cnn.com/cnnnext/dam/assets/170606122114-vietnam---travel-destination--shutterstock-168342398.jpg" />
+<meta property="og:image" content="https://cdn.cnn.com/cnnnext/dam/assets/170606122114-vietnam---travel-destination--shutterstock-168342398.jpg" />
 </head>
 <body>
 <script>
