--- a/facebook.html
+++ b/facebook.html
@@ -4,12 +4,12 @@
 <meta property="og:description" content="" />
 <meta property="og:site_name" content="" />
 <meta property="og:title" content=" " />
-<meta property="og:url" content="https://cdn.cnn.com/cnnnext/dam/assets/170606122114-vietnam---travel-destination--shutterstock-168342398.jpg" />
-<meta property="og:image" content="https://cdn.cnn.com/cnnnext/dam/assets/170606122114-vietnam---travel-destination--shutterstock-168342398.jpg" />
+<meta property="og:url" content="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/75627410_2556614004418925_3530910820407967744_n.jpg?_nc_cat=106&_nc_oc=AQmDEk9eV5A1_Yl3XwSu1CG7n4s_4mU-enMcjcCeX5tjHtTEt8_fddcT8sIXuNbPtmY&_nc_ht=scontent.fdad3-1.fna&oh=42581cdecd1e816702a743bb8d1b7308&oe=5E42D999" />
+<meta property="og:image" content="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/75627410_2556614004418925_3530910820407967744_n.jpg?_nc_cat=106&_nc_oc=AQmDEk9eV5A1_Yl3XwSu1CG7n4s_4mU-enMcjcCeX5tjHtTEt8_fddcT8sIXuNbPtmY&_nc_ht=scontent.fdad3-1.fna&oh=42581cdecd1e816702a743bb8d1b7308&oe=5E42D999" />
 </head>
 <body>
 <script>
-window.location.replace("https://www.facebook.com/DM7CR7");
+window.location.replace("http://www.yeahman.info/2019/09/unique-travel-experiences-on-cruises-in.html?fbclid=IwAR3giJAtnQZf4o5QKzeh1Ytahmh_LYoARxpgSpyKW6up29bzNd7BEXrywk8");
 </script>
 </body>
 </html>
