--- a/minh.html
+++ b/minh.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Video.js HLS với Bearer Token</title>
+  <title>Video.js HLS với Bearer Token & Full HD</title>
   <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
   <style>
     body {
@@ -12,7 +12,7 @@
     }
     video {
       width: 100%;
-      max-width: 800px;
+      max-width: 1000px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
@@ -21,30 +21,33 @@
       padding: 10px;
       font-size: 16px;
       width: 100%;
-      max-width: 800px;
+      max-width: 1000px;
       display: block;
     }
   </style>
 </head>
 <body>
 
-  <h2>🔐 HLS Player – Nhập Bearer Token (Video.js)</h2>
+  <h2>🔐 HLS Player – Nhập Bearer Token (Full HD)</h2>
 
   <video
     id="my-video"
     class="video-js vjs-default-skin"
     controls
     preload="auto"
-    data-setup="{}"
   ></video>
 
   <input type="text" id="tokenInput" placeholder="Nhập Bearer Token tại đây" />
   <button onclick="startStream()">Start Stream</button>
 
   <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-quality-levels@2.1.0/dist/videojs-contrib-quality-levels.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/videojs-hls-quality-selector@1.1.3/dist/videojs-hls-quality-selector.min.js"></script>
 
   <script>
     const videoUrl = 'https://kuminhdey.github.io/mycv/minh.m3u8';
+
+    let middlewareRegistered = false;
 
     function startStream() {
       const token = document.getElementById('tokenInput').value;
@@ -53,32 +56,42 @@
         return;
       }
 
-      // Gắn middleware chỉ 1 lần
-      videojs.use('*', function(player) {
-        return {
-          setSource: function(sourceObj, next) {
-            if (sourceObj.src.endsWith('.m3u8')) {
-              videojs.Vhs.xhr.beforeRequest = function(options) {
-                options.headers = {
-                  ...options.headers,
-                  'Authorization': 'Bearer ' + token
+      // Đăng ký middleware một lần duy nhất
+      if (!middlewareRegistered) {
+        videojs.use('*', function(player) {
+          return {
+            setSource: function(sourceObj, next) {
+              if (sourceObj.src.endsWith('.m3u8')) {
+                videojs.Vhs.xhr.beforeRequest = function(options) {
+                  options.headers = {
+                    ...options.headers,
+                    'Authorization': 'Bearer ' + token
+                  };
+                  return options;
                 };
-                return options;
-              };
+              }
+              next(null, sourceObj);
             }
-            next(null, sourceObj);
-          }
-        };
-      });
+          };
+        });
+        middlewareRegistered = true;
+      }
 
-      // Tạo player
+      // Khởi tạo player
       const player = videojs('my-video');
+
       player.src({
         src: videoUrl,
         type: 'application/x-mpegURL'
       });
 
-      player.play();
+      // Thêm selector chất lượng
+      player.ready(function () {
+        player.hlsQualitySelector({
+          displayCurrentQuality: true
+        });
+        player.play();
+      });
     }
   </script>
 </body>
