--- a/minh1.html
+++ b/minh1.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Play M3U8 với Bearer Token</title>
+  <title>Play M3U8 Bearer Token 1</title>
   <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
   <style>
     body {
@@ -12,7 +12,6 @@
       max-width: 700px;
       margin: auto;
     }
-
     input, textarea, button {
       width: 100%;
       margin-bottom: 1rem;
@@ -21,17 +20,14 @@
       border: 1px solid #ccc;
       border-radius: 5px;
     }
-
     button {
       background-color: #007bff;
       color: white;
       cursor: pointer;
     }
-
     button:hover {
       background-color: #0056b3;
     }
-
     #video-container {
       margin-top: 2rem;
       display: none;
@@ -40,10 +36,10 @@
 </head>
 <body>
 
-  <h2>🔑 Phát video M3U8 có Bearer Token</h2>
+  <h2>🔐 Phát video M3U8 với Bearer Token</h2>
 
-  <input type="text" id="m3u8-url" placeholder="Nhập đường dẫn M3U8 (https://...)">
-  <textarea id="bearer-token" placeholder="Nhập Bearer Token tại đây..."></textarea>
+  <input type="text" id="m3u8-url" placeholder="Nhập URL M3U8">
+  <textarea id="bearer-token" placeholder="Bearer Token..."></textarea>
   <button onclick="loadVideo()">Phát Video</button>
 
   <div id="video-container">
@@ -54,13 +50,32 @@
 
   <script>
     let player;
+    let token = '';
+
+    // Cấu hình VHS để chèn Header Authorization khi load HLS
+    videojs.use('*', function(player) {
+      return {
+        setSource: function(sourceObj, next) {
+          if (sourceObj.src.endsWith('.m3u8')) {
+            videojs.Vhs.xhr.beforeRequest = function(options) {
+              options.headers = {
+                ...options.headers,
+                'Authorization': 'Bearer ' + token
+              };
+              return options;
+            };
+          }
+          next(null, sourceObj);
+        }
+      };
+    });
 
     function loadVideo() {
       const url = document.getElementById('m3u8-url').value.trim();
-      const token = document.getElementById('bearer-token').value.trim();
+      token = document.getElementById('bearer-token').value.trim();
 
       if (!url || !token) {
-        alert("⚠️ Vui lòng nhập đầy đủ M3U8 URL và Bearer Token.");
+        alert("⚠️ Nhập đầy đủ M3U8 URL và Bearer Token.");
         return;
       }
 
@@ -69,19 +84,6 @@
       }
 
       document.getElementById('video-container').style.display = 'block';
-
-      // Ghi đè XMLHttpRequest để thêm Authorization Header
-      const OriginalXHR = window.XMLHttpRequest;
-      function CustomXHR() {
-        const xhr = new OriginalXHR();
-        const originalOpen = xhr.open;
-        xhr.open = function () {
-          originalOpen.apply(xhr, arguments);
-          xhr.setRequestHeader('Authorization', `Bearer ${token}`);
-        };
-        return xhr;
-      }
-      window.XMLHttpRequest = CustomXHR;
 
       player = videojs('video-player', {
         controls: true,
@@ -103,5 +105,6 @@
       });
     }
   </script>
+
 </body>
 </html>
