--- a/minh1.html
+++ b/minh1.html
@@ -42,7 +42,7 @@
 
   <h2>🔐 Phát video M3U8 qua CORS Proxy + Bearer Token</h2>
 
-  <input type="text" id="m3u8-url" placeholder="Nhập URL M3U8 (dạng https://api-place.fpt.com/...)">
+  <input type="text" id="m3u8-url" placeholder="Nhập URL M3U8 (dạng https://...)">
   <textarea id="bearer-token" placeholder="Bearer Token tại đây..."></textarea>
   <button onclick="loadVideo()">🎬 Phát Video</button>
 
