--- a/index.html
+++ b/index.html
@@ -633,6 +633,15 @@
 <script src="javascript/scrollreveal.min.js"></script>
 <script src="javascript/jquery.touchSwipe.min.js"></script>
 <script src="javascript/custom.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MPTL3VLTJQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MPTL3VLTJQ');
+</script>
 
 
 </body>
