--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <!-- DOWNLOAD CV BUTTON -->
                             <a href="dangducminh_cv.pdf" target="_blank"  id="download-cv" class="btn waves-effect">Download CV</a>
                             <!-- CONTACT BUTTON -->
-                            <a href="https://www.facebook.com/DM7CR7" id="contact_me" target="_blank"  class="btn waves-effect">Contact Me</a>
+                            <a href="https://www.facebook.com/DM7CR7" id="contact-me" target="_blank"  class="btn waves-effect">Contact Me</a>
                         </div>
                     </div>
                 </div>
